ide plugin building fixes